incoming requests done

--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -27,7 +27,7 @@
 
             </ul>
         </li>
-        <li>
+        <li class="inv">
             <div class="iocn-link">
                 <a href="#" class="alter">
                     <i class='fa fa-user'></i>
@@ -40,28 +40,7 @@
                     <button class="scroll-button left">&lt;</button>
                     <div class="friend-requests-container">
                         <ul class="friend-requests-list">
-                            <li class="friend-request">
-                                <span class="friend-request-name">Friend Request 1</span>
-                                <span class="friend-request-icons">
-                                <i class="accept-icon fa fa-check"></i>
-                                <i class="decline-icon fa fa-times"></i>
-                                    </span>
-                            </li>
-                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
-                                <span class="friend-request-icons">
-                                <i class="accept-icon fa fa-check"></i>
-                                <i class="decline-icon fa fa-times"></i>
-                                    </span></li>
-                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
-                                <span class="friend-request-icons">
-                                <i class="accept-icon fa fa-check"></i>
-                                <i class="decline-icon fa fa-times"></i>
-                                    </span></li>
-                            <li class="friend-request"><span class="friend-request-name">Friend Request 1</span>
-                                <span class="friend-request-icons">
-                                <i class="accept-icon fa fa-check"></i>
-                                <i class="decline-icon fa fa-times"></i>
-                                    </span></li>
+
                         </ul>
                     </div>
                     <button class="scroll-button right">&gt;</button>
