--- a/front/js/components/sideBarComponent/sideBarComponent.css
+++ b/front/js/components/sideBarComponent/sideBarComponent.css
@@ -62,6 +62,12 @@
     list-style: none;
     transition: all 0.4s ease;
 }
+
+.inv:hover{
+    background: white;
+}
+
+
 .sidebar .nav-links li:hover{
     background: #1d1b31;
 }
