invitations handled (still back)  loading screen handled + hom button in process

--- a/front/js/components/loadingPageComponent/loadingPageComponent.html
+++ b/front/js/components/loadingPageComponent/loadingPageComponent.html
@@ -1,19 +1,33 @@
 <style>
-    @import url("loadingPageComponent.css");
+    @import url("./js/components/loadingPageComponent/loadingPageComponent.css");
 </style>
 
 <body>
 <div class="loader">
-    <span class="lettre">L</span>
-    <span class="lettre">O</span>
+    <span class="lettre">W</span>
     <span class="lettre">A</span>
-    <span class="lettre">D</span>
+    <span class="lettre">I</span>
+    <span class="lettre">T</span>
     <span class="lettre">I</span>
     <span class="lettre">N</span>
-    <span class="lettre">G</span>
+    <span class="lettre">G&nbsp;</span>
+    <span class="lettre">F</span>
+    <span class="lettre">O</span>
+    <span class="lettre">R&nbsp;</span>
+    <span class="lettre">O</span>
+    <span class="lettre">P</span>
+    <span class="lettre">P</span>
+    <span class="lettre">O</span>
+    <span class="lettre">N</span>
+    <span class="lettre">E</span>
+    <span class="lettre">N</span>
+    <span class="lettre">T</span>
     <span class="lettre">.</span>
     <span class="lettre">.</span>
     <span class="lettre">.</span>
+
+
+
 </div>
 
 </body>
