--- a/front/js/components/loadingPageComponent/loadingPageComponent.css
+++ b/front/js/components/loadingPageComponent/loadingPageComponent.css
@@ -6,16 +6,16 @@ body {
 
 .loader{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #000000;
+    width:3%;
+    height: 12%;
+    background: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .lettre{
-    font-size: 80px;
+    font-size: 20px;
     color: #484848;
     letter-spacing: 15px;
     margin-bottom: 150px;
