--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -10,7 +10,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="alter" >
+            <a href="#" class="alter" id="home-link">
                 <i class='fa fa-home'></i>
                 <span class="link_name">Home</span>
             </a>
