--- a/front/js/components/gameChatComponent/gameChatComponent.css
+++ b/front/js/components/gameChatComponent/gameChatComponent.css
@@ -8,13 +8,15 @@
     border-radius: 10px;
     overflow: hidden;
     scrollbar-width: thin;
+    background-color: white;
 }
 
 .chat-history {
     height: 80%;
     overflow-y: scroll;
-    padding-top: 27;
+    padding-top: 27px;
     scrollbar-width: thin;
+    background-color: white;
 }
 
 .chat-input {
@@ -22,6 +24,7 @@
     display: flex;
     align-items: center;
     padding: 0px;
+    background-color: white;
 }
 
 .chat-input input[type="text"] {
@@ -45,7 +48,7 @@
 .close-button {
     position: absolute;
     top: 0;
-    right: 20;
+    right: 20px;
     padding: 6px;
     font-size: 20px;
     background-color: #fff;
