--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -6,9 +6,20 @@
         <div class="user-info">
             <img src="../profile-picture.jpg" alt="Profile Picture">
             <div class="profile-name">
-                <h1 id="userName"></h1>
-                <h1 id="email"></h1>
-                <p id="rank">Rank : Diamond 1</p>
+                <div class="info-element">
+                    <h1 class="infos">Username : </h1>
+                    <h1 class="infos" id="userName"></h1>
+                </div>
+
+                <div class="info-element">
+                    <h1 class="infos">Email : </h1>
+                    <h1 class="infos" id="email"></h1>
+                </div>
+
+                <div>
+                    <h1 class="infos">Rank : </h1>
+                    <h1 class="infos" id="rank">Diamond 1</h1>
+                </div>
             </div>
         </div>
         <div class="stats">
