--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="profile">
         <div class="user-info">
-            <img src="../profile-picture.jpg" alt="Profile Picture">
+            <img src="../images/profile-picture.jpg" alt="Profile Picture">
             <div class="profile-name">
                 <div class="info-element">
                     <h1 class="infos">Username : </h1>
@@ -16,9 +16,15 @@
                     <h1 class="infos" id="email"></h1>
                 </div>
 
+                <div class="info-element">
+                    <h1 class="infos">Score : </h1>
+                    <h1 class="infos" id="score"></h1>
+                </div>
                 <div>
+                    <img class="rank-img" src="" alt="Rank Picture">
                     <h1 class="infos">Rank : </h1>
-                    <h1 class="infos" id="rank">Diamond 1</h1>
+                    <h1 class="infos" id="rank"></h1>
+
                 </div>
             </div>
         </div>
