--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -21,10 +21,20 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    margin-bottom: 20px;
     box-shadow: 0 0 10px #fff;
-    margin-top: 50px;
-    width: 700px;
+    width: 500px;
+    margin-right: 100px;
+}
+
+.history {
+
+    border-radius: 10px;
+    padding: 20px;
+    height: 300px;
+    margin-top: 40px;
+    box-shadow: 0 0 10px #fff;
+    background: #ffffff;
+    width: 500px;
 }
 
 .user-info {
@@ -37,7 +47,7 @@ body {
     padding-left: 20px;
 }
 
-.profile img {
+.profile img:first-child {
     float: left;
     margin-right: 20px;
     width: 150px;
@@ -45,6 +55,14 @@ body {
     border-radius: 50%;
     margin-bottom: 10px;
 
+}
+
+.rank-img{
+    float: left;
+    margin-right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 .profile h1 {
@@ -85,18 +103,7 @@ body {
     display: inline-block;
 }
 
-.history {
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-    height: 300px;
-    margin-top: 40px;
-    box-shadow: 0 0 10px #fff;
-    background: #ffffff;
-    width: 700px;
 
-
-}
 
 .history-list {
     overflow-y: scroll;
