fix pb with mute icone

--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -10,9 +10,8 @@
     <button class="chat-input">Well played!</button>
     <button class="chat-input">Good game!</button>
   </div>
-  <div class="mute-icon">
-    <i  id="mute-btn" class="fas fa-volume-mute"></i>
-  </div>
+  <button class="mute-icon" id="mute-btn"> Mute </button>
+
 </div>
 <div class="container">
   <!--
