--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -13,28 +13,29 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile {
-
     background: #ffffff;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
     box-shadow: 0 0 10px #fff;
-    width: 500px;
+    width: 600px;
     margin-right: 100px;
 }
 
 .history {
-
     border-radius: 10px;
     padding: 20px;
     height: 300px;
-    margin-top: 40px;
     box-shadow: 0 0 10px #fff;
     background: #ffffff;
-    width: 500px;
+    width: 600px;
+    height: 358px;
 }
 
 .user-info {
@@ -47,26 +48,23 @@ body {
     padding-left: 20px;
 }
 
-.profile img:first-child {
+.avatar-img {
     float: left;
     margin-right: 20px;
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    margin-bottom: 10px;
-
 }
 
 .rank-img{
     float: left;
-    margin-right: 20px;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
 }
 
 .profile h1 {
-    font-size: 26px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
@@ -141,4 +139,15 @@ th {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.title-profile{
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 30px;
+    font-family: Arial;
+    font-weight: bold;
 }
