--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -73,23 +73,25 @@ body {
 }
 
 .stats {
-    margin-top: 20px;
+    margin-top: 10px;
+
 }
 
 .stat {
     flex-basis: 30%;
     border-radius: 10px;
-
+    padding-top: 10px;
+    padding-bottom: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     text-align: center;
     background: linear-gradient(to right, #9ef1b7, #23be57);
+    margin-bottom: 10px;
 
 }
 
 .stat h2 {
     font-size: 24px;
-    margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 3px;
 }
 
 .stat p {
