--- a/front/js/components/sideBarComponent/sideBarComponent.css
+++ b/front/js/components/sideBarComponent/sideBarComponent.css
@@ -136,7 +136,7 @@
     left: 100%;
     top: -10px;
     margin-top: 0;
-    padding: 10px 20px;
+    padding: 0px 20px;
     border-radius: 0 6px 6px 0;
     opacity: 0;
     display: block;
@@ -371,6 +371,7 @@
     opacity: 1;
     pointer-events: auto;
     transition: all 0.4s ease;
+    padding: 0;
 }
 .sidebar .nav-links li .sub-menu1 .link_name{
     display: none;
