--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li>
-            <a href="#" id="profile">
+            <a href="#" class="alter" id="profile">
                 <i class='fa fa-user'></i>
                 <span class="link_name">Profile</span>
             </a>
@@ -24,7 +24,7 @@
         <li>
             <div class="iocn-link">
                 <a href="#" class="alter">
-                    <i class='fa fa-user'></i>
+                    <i class='fa fa-users'></i>
                     <span class="link_name">Friends</span>
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
@@ -36,7 +36,7 @@
         <li class="inv">
             <div class="iocn-link">
                 <a href="#" class="alter">
-                    <i class='fa fa-user'></i>
+                    <i class='fa fa-user-plus'></i>
                     <span class="link_name">Invitations</span>
                 </a>
                 <i class='fa fa-chevron-down arrow'></i>
