--- a/front/js/components/loginPageComponent/loginPageComponent.css
+++ b/front/js/components/loginPageComponent/loginPageComponent.css
@@ -8,15 +8,16 @@
 }
 
 /* Style the form */
-form {
+#loginForm {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 40px;
     width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Style the input fields */
@@ -26,7 +27,6 @@ input[type="password"] {
     border-radius: 10px;
     font-size: 18px;
     padding: 20px;
-    width: 100%;
     margin-bottom: 20px;
 }
 
