--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -51,8 +51,8 @@ body {
 .avatar-img {
     float: left;
     margin-right: 20px;
-    width: 150px;
-    height: 150px;
+    width: 30%;
+    height: auto;
     border-radius: 50%;
 }
 
@@ -70,6 +70,9 @@ body {
 
 .info-element{
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .stats {
