--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -12,18 +12,17 @@
                 </div>
 
                 <div class="info-element">
+                    <i class="fa-solid fa-envelope"></i>
                     <h1 class="infos" id="email"></h1>
                 </div>
 
                 <div class="info-element">
-                    <img class="rank-img" src="" alt="Rank Picture">
-                    <h1 class="infos">Score : </h1>
+                    <i class="fa-solid fa-star"></i>
                     <h1 class="infos" id="score"></h1>
                 </div>
                 <div>
-                    <h1 class="infos">Rank : </h1>
+                    <i class="fa-solid fa-ranking-star"></i>
                     <h1 class="infos" id="rank"></h1>
-
                 </div>
             </div>
         </div>
