--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -17,11 +17,13 @@
                 </div>
 
                 <div class="info-element">
-                    <i class="fa-solid fa-star"></i>
-                    <h1 class="infos" id="score"></h1>
+                    <img class="rank-img" src="" alt="Rank Picture">
+                    <!--<i class="fa-solid fa-star"></i>-->
+                    <h1 class="infos" id="score">Score : </h1>
+
                 </div>
                 <div>
-                    <i class="fa-solid fa-ranking-star"></i>
+                    <!--<i class="fa-solid fa-ranking-star"></i>-->
                     <h1 class="infos" id="rank"></h1>
                 </div>
             </div>
