--- a/front/js/components/playModeComponent/playModeComponent.css
+++ b/front/js/components/playModeComponent/playModeComponent.css
@@ -19,6 +19,10 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 33px;
 }
 
 .centered{
