--- a/front/js/components/sideBarComponent/sideBarComponent.html
+++ b/front/js/components/sideBarComponent/sideBarComponent.html
@@ -65,7 +65,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="alter">
+            <a href="#" class="alter" id="logout-link">
                 <i class="fa fa-sign-out" aria-hidden="true"></i>
                 <span class="link_name">Logout</span>
             </a>
