Patch/ingame chat messages (#4)
* fix : chat message now load

* add : remove friend backend

* add : friend can be deleted now

--- a/front/js/components/sideBarComponent/sideBarComponent.css
+++ b/front/js/components/sideBarComponent/sideBarComponent.css
@@ -445,3 +445,27 @@
     flex-direction: column;
 
 }
+
+.friend {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.friendicons-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-right: 10%;
+}
+
+.friendicons-wrapper i{
+    
+    min-width: 30px !important;
+    max-width: 30px !important;
+}
+
+.friendname-text-wrapper{
+    
+}
