gamification : add trophees succession

--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -35,7 +35,71 @@
             </div>
             <div class="stat">
                 <h2>Wins</h2>
-                <p id="online-wins">1500</p>
+                <p id="online-wins">50</p>
+            </div>
+            <div class="stat">
+                <h2>Tie</h2>
+                <p id="tie">25</p>
+            </div>
+        </div>
+        <div class="progressions">
+            <div class="history-list">
+                <table id="progression-table">
+                    <thead>
+                    <tr class="history-tab">
+                        <th>Trophee</th>
+                        <th>Mission</th>
+                        <th>Progression</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Novice Player </td>
+                        <td>Play 10 games </td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id ="novicePlayer" style="width:0%;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Novice Winner</td>
+                        <td>Win 10 games</td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id = "noviceWinner" style="width:0%;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>O.G </td>
+                        <td>Play 100 games </td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id="OG" style="width:0%;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>intermediate Player</td>
+                        <td>Reach 400 points</td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id = "intermediatePlayer" style="width:0%;position: center;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>You are so good</td>
+                        <td>Reach 800 points</td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id="goodPlayer" style="width:0%;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -51,4 +115,5 @@
         </table>
         </div>
     </div>
+
 </div>
