--- a/front/js/components/profileComponent/profileComponent.css
+++ b/front/js/components/profileComponent/profileComponent.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    max-width: 1050px;
+    max-width: 1300px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -76,19 +76,27 @@ body {
 
 .stats {
     margin-top: 10px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .stat {
+    display: inline-block;
     flex-basis: 30%;
     border-radius: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     text-align: center;
-    background: linear-gradient(to right, #9ef1b7, #23be57);
+    background: linear-gradient(to right, #a17d22, #ffb600);
     margin-bottom: 10px;
-
+    justify-content: center;
+    align-content: center;
+}
+.stat:not(:last-child) {
+    margin-right: 20px;
 }
 
 .stat h2 {
@@ -154,4 +162,22 @@ th {
     font-size: 33px;
     font-weight: bold;
     font-style: italic;
+}
+
+.progress-bar {
+    height: 20px;
+    background-color: #ddd;
+    border-radius: 5px;
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.progress-bar-inner {
+    height: 100%;
+    background-color: #ffda00;
+    text-align: right;
+    padding-right: 10px;
+    line-height: 20px;
+    transition: width 0.5s ease;
 }
