--- a/front/js/components/playModeComponent/playModeComponent.html
+++ b/front/js/components/playModeComponent/playModeComponent.html
@@ -8,6 +8,9 @@
       <button id="vsComputer">Player VS Computer</button>
       <button id="vsPlayer">Player VS Player</button>
     </div>
+    <div class="container">
+        <button id="vsLocalPlayer">Local Player vs Player</button>
+    </div>
   </div>
 </div>
 <script src="playModeComponent.js"></script>
