--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -1,7 +1,6 @@
 <style>
     @import url("./js/components/profileComponent/profileComponent.css");
 </style>
-<div class="title-profile"> Profile </div>
 <div class="container">
     <div class="profile">
         <div class="user-info">
@@ -45,7 +44,7 @@
         <div class="progressions">
             <div class="history-list">
                 <table id="progression-table">
-                    <thead>
+                    <thead class="thead">
                     <tr class="history-tab">
                         <th>Trophee</th>
                         <th>Mission</th>
@@ -107,9 +106,10 @@
         <h2 class="history-title">Game History</h2>
         <div class="history-list">
         <table id="history-table">
-            <tr class="history-tab">
-                <th>Against</th>
-                <th>Result</th>
+                <thead class="thead">
+                    <th>Against</th>
+                    <th>Result</th>
+                </thead>
 
             </tr>
         </table>
