--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -97,5 +97,5 @@
       </tr>
     </tbody>
   </table>
-  <button id="save-btn"> SAVE THE GAME STATE </button>
+  <button id="save-btn"> SAVE </button>
 </div>
