--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="progressions">
-            <div class="history-list">
+            <div class="trophee-list">
                 <table id="progression-table">
                     <thead class="thead">
                     <tr class="history-tab">
@@ -53,47 +53,56 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>Novice Player </td>
+                        <td>Welcome Abroad </td>
                         <td>Play 10 games </td>
                         <td>
                             <div class="progress-bar">
-                                <div class="progress-bar-inner" id ="novicePlayer" style="width:0%;">0%</div>
+                                <div class="progress-bar-inner" id ="welcome-abroad" style="width:0%;">0%</div>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Novice Winner</td>
-                        <td>Win 10 games</td>
-                        <td>
-                            <div class="progress-bar">
-                                <div class="progress-bar-inner" id = "noviceWinner" style="width:0%;">0%</div>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>O.G </td>
+                        <td>Goat </td>
                         <td>Play 100 games </td>
                         <td>
                             <div class="progress-bar">
-                                <div class="progress-bar-inner" id="OG" style="width:0%;">0%</div>
+                                <div class="progress-bar-inner" id="goat" style="width:0%;">0%</div>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>intermediate Player</td>
-                        <td>Reach 400 points</td>
+                        <td>Primer</td>
+                        <td>Win 15 games</td>
                         <td>
                             <div class="progress-bar">
-                                <div class="progress-bar-inner" id = "intermediatePlayer" style="width:0%;position: center;">0%</div>
+                                <div class="progress-bar-inner" id = "primer" style="width:0%;">0%</div>
                             </div>
                         </td>
                     </tr>
                     <tr>
-                        <td>You are so good</td>
-                        <td>Reach 800 points</td>
+                        <td>The Slayer</td>
+                        <td>Win 5 consecutive games</td>
                         <td>
                             <div class="progress-bar">
-                                <div class="progress-bar-inner" id="goodPlayer" style="width:0%;">0%</div>
+                                <div class="progress-bar-inner" id = "5-games" style="width:0%;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Level Up</td>
+                        <td>Reach score of 400</td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id = "levelup" style="width:0%;position: center;">0%</div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Ultimate Goat</td>
+                        <td>Reach score of 800</td>
+                        <td>
+                            <div class="progress-bar">
+                                <div class="progress-bar-inner" id="utlimate-goat" style="width:0%;">0%</div>
                             </div>
                         </td>
                     </tr>
