--- a/front/css/stylesheet.css
+++ b/front/css/stylesheet.css
@@ -9,7 +9,7 @@ body{
 }
 
 body {
-	background: linear-gradient(-45deg, #000000, #1f1f1f, #000000);
+	background: linear-gradient(-45deg, #000000,rgba(0, 28, 21, 0.88), #000000);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
@@ -25,4 +25,13 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+.logo{
+	max-width: 10%;
+	max-height: 10%;
+	position: absolute;
+	z-index: -1;
+	right: 10px;
+	bottom: 20px;
 }
