challenge and delete from profile

--- a/front/js/components/friendProfileComponent/friendProfileComponent.html
+++ b/front/js/components/friendProfileComponent/friendProfileComponent.html
@@ -1,5 +1,6 @@
 <style>
     @import url("./js/components/profileComponent/profileComponent.css");
+    @import url("./js/components/friendProfileComponent/friendProfileComponent.css");
 </style>
 <div class="container">
     <div class="profile" style="margin-right:0px ">
@@ -19,6 +20,10 @@
                 <div>
                     <!--<i class="fa-solid fa-ranking-star"></i>-->
                     <h1 class="infos" id="rank"></h1>
+                </div>
+                <div class="interaction-btn">
+                    <button class="but" id="challenge"> Challenge Me ! </button>
+                    <button class="but" id="delete"> Delete Friend</button>
                 </div>
             </div>
         </div>
