--- a/front/js/components/friendProfileComponent/friendProfileComponent.html
+++ b/front/js/components/friendProfileComponent/friendProfileComponent.html
@@ -21,7 +21,7 @@
                     <!--<i class="fa-solid fa-ranking-star"></i>-->
                     <h1 class="infos" id="rank"></h1>
                 </div>
-                <div class="interaction-btn">
+                <div class="interaction">
                     <button class="but" id="challenge"> Challenge Me ! </button>
                     <button class="but" id="delete"> Delete Friend</button>
                 </div>
