--- a/front/js/components/localGameComponent/localGameComponent.html
+++ b/front/js/components/localGameComponent/localGameComponent.html
@@ -3,6 +3,9 @@
 </style>
 <html lang="en">
 <body>
+<div class="turn">
+    <h1 class="turn-text">Turn</h1>
+</div>
 <h2 id="winner"></h2>
 <div id="board"></div>
 </body>
