--- a/front/js/components/profileComponent/profileComponent.html
+++ b/front/js/components/profileComponent/profileComponent.html
@@ -62,7 +62,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Goat </td>
+                        <td>Wolf </td>
                         <td>Play 100 games </td>
                         <td>
                             <div class="progress-bar">
@@ -98,7 +98,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Ultimate Goat</td>
+                        <td>Ultimate Wolf</td>
                         <td>Reach score of 800</td>
                         <td>
                             <div class="progress-bar">
