--- a/front/js/components/gameChatComponent/gameChatComponent.html
+++ b/front/js/components/gameChatComponent/gameChatComponent.html
@@ -1,15 +1,15 @@
 <style>
-    @import url("gameChatComponent.css");
+    @import url("./js/components/gameChatComponent/gameChatComponent.css");
 </style>
-<div>
-    <div class="chat-container">
-        <div class="chat">
-            <div class="message"><b>username : </b> <span>message</span></div>
-        </div>
-        <div class="message-sender">
-            <input type="text" class="message-box">
-            <button class="send-button">&#x25BA;</button>
-        </div>
+<div class="chat-box">
+    <button class="close-button">&times;</button>
+    <div class="chat-history" id="message-list">
+        <!-- chat messages go here -->
     </div>
-    <button class="chat-open-button" ><img class="chat-icon" src="https://w7.pngwing.com/pngs/237/433/png-transparent-computer-icons-online-chat-chat-icon-miscellaneous-text-conversation.png"></button>
+    <div class="chat-input">
+        <input type="text" id="message-input" placeholder="Type your message...">
+        <button id="submit-btn">Send</button>
+    </div>
 </div>
+
+
