--- a/front/js/components/playModeComponent/playModeComponent.html
+++ b/front/js/components/playModeComponent/playModeComponent.html
@@ -1,22 +1,16 @@
 <style>
   @import url("./js/components/playModeComponent/playModeComponent.css");
 </style>
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head> -->
-<!-- <body> -->
 <div>
-  <div class="centered">
+    <div class="centered">
     <h1 class="title">Choose your game mode</h1>
     <div class="container">
       <button id="vsComputer">Player VS Computer</button>
       <button id="vsPlayer">Player VS Player</button>
     </div>
+    <div class="container">
+        <button id="vsLocalPlayer">Local Player vs Player</button>
+    </div>
   </div>
 </div>
-<!-- </body> -->
 <script src="playModeComponent.js"></script>
-<!-- </html> -->
