--- a/front/js/components/gameComponent/gameComponent.html
+++ b/front/js/components/gameComponent/gameComponent.html
@@ -1,11 +1,37 @@
 <style>
   @import url("./js/components/gameComponent/gameComponent.css");
-</style>            
-<h1 id="winner"></h1>
+</style>
+
+
+<div class="container">
+  <!--
+  <div id="chat">
+    <button id="mute-btn"> Mute </button>
+    <div id="chat-box">
+      <div id="chat-messages"></div>
+      <li id="chat-inputs">
+        <button class="chat-input">Nice move!</button>
+        <button class="chat-input">You're a beast!</button>
+        <button class="chat-input">Well played!</ul>
+          <button class="chat-input">Good game!</button>
+      </li>
+    </div>
+  </div>
+  /////////////
+    -->
+
+  <h1 id="winner"></h1>
+
+</div>
+<div class="turn">
+  <h1 class="turn-text"> </h1>
+</div>
+<button id="save-btn"> SAVE  </button>
+
 <div id="wrapper">
-<table>
-  <thead>
-    <tr class="column-selector">
+  <table>
+    <thead>
+      <tr class="column-selector">
         <td class="column"><span class="hidden arrow" column=0>&darr;</span></td>
         <td class="column"><span class="hidden arrow" column=1>&darr;</span></td>
         <td class="column"><span class="hidden arrow" column=2>&darr;</span></td>
@@ -13,64 +39,64 @@
         <td class="column"><span class="hidden arrow" column=4>&darr;</span></td>
         <td class="column"><span class="hidden arrow" column=5>&darr;</span></td>
         <td class="column"><span class="hidden arrow" column=6>&darr;</span></td>
-    </tr>
-  </thead>
-  <tbody id="board">
-    <tr>
-      <td class="tile" row=0 column=0></td>
-      <td class="tile" row=0 column=1></td>
-      <td class="tile" row=0 column=2></td>
-      <td class="tile" row=0 column=3></td>
-      <td class="tile" row=0 column=4></td>
-      <td class="tile" row=0 column=5></td>
-      <td class="tile" row=0 column=6></td>
-    </tr>
-    <tr>
-      <td class="tile" row=1 column=0></td>
-      <td class="tile" row=1 column=1></td>
-      <td class="tile" row=1 column=2></td>
-      <td class="tile" row=1 column=3></td>
-      <td class="tile" row=1 column=4></td>
-      <td class="tile" row=1 column=5></td>
-      <td class="tile" row=1 column=6></td>
-    </tr>
-    <tr>
-      <td class="tile" row=2 column=0></td>
-      <td class="tile" row=2 column=1></td>
-      <td class="tile" row=2 column=2></td>
-      <td class="tile" row=2 column=3></td>
-      <td class="tile" row=2 column=4></td>
-      <td class="tile" row=2 column=5></td>
-      <td class="tile" row=2 column=6></td>
-    </tr>
-    <tr>
-      <td class="tile" row=3 column=0></td>
-      <td class="tile" row=3 column=1></td>
-      <td class="tile" row=3 column=2></td>
-      <td class="tile" row=3 column=3></td>
-      <td class="tile" row=3 column=4></td>
-      <td class="tile" row=3 column=5></td>
-      <td class="tile" row=3 column=6></td>
-    </tr>
-    <tr>
-      <td class="tile" row=4 column=0></td>
-      <td class="tile" row=4 column=1></td>
-      <td class="tile" row=4 column=2></td>
-      <td class="tile" row=4 column=3></td>
-      <td class="tile" row=4 column=4></td>
-      <td class="tile" row=4 column=5></td>
-      <td class="tile" row=4 column=6></td>
-    </tr>
-    <tr>
-      <td class="tile" row=5 column=0></td>
-      <td class="tile" row=5 column=1></td>
-      <td class="tile" row=5 column=2></td>
-      <td class="tile" row=5 column=3></td>
-      <td class="tile" row=5 column=4></td>
-      <td class="tile" row=5 column=5></td>
-      <td class="tile" row=5 column=6></td>
-    </tr>
-  </tbody>
-</table>
-<button id="save-btn"> SAVE THE GAME STATE </button>
+      </tr>
+    </thead>
+    <tbody id="board">
+      <tr>
+        <td class="tile" row=0 column=0></td>
+        <td class="tile" row=0 column=1></td>
+        <td class="tile" row=0 column=2></td>
+        <td class="tile" row=0 column=3></td>
+        <td class="tile" row=0 column=4></td>
+        <td class="tile" row=0 column=5></td>
+        <td class="tile" row=0 column=6></td>
+      </tr>
+      <tr>
+        <td class="tile" row=1 column=0></td>
+        <td class="tile" row=1 column=1></td>
+        <td class="tile" row=1 column=2></td>
+        <td class="tile" row=1 column=3></td>
+        <td class="tile" row=1 column=4></td>
+        <td class="tile" row=1 column=5></td>
+        <td class="tile" row=1 column=6></td>
+      </tr>
+      <tr>
+        <td class="tile" row=2 column=0></td>
+        <td class="tile" row=2 column=1></td>
+        <td class="tile" row=2 column=2></td>
+        <td class="tile" row=2 column=3></td>
+        <td class="tile" row=2 column=4></td>
+        <td class="tile" row=2 column=5></td>
+        <td class="tile" row=2 column=6></td>
+      </tr>
+      <tr>
+        <td class="tile" row=3 column=0></td>
+        <td class="tile" row=3 column=1></td>
+        <td class="tile" row=3 column=2></td>
+        <td class="tile" row=3 column=3></td>
+        <td class="tile" row=3 column=4></td>
+        <td class="tile" row=3 column=5></td>
+        <td class="tile" row=3 column=6></td>
+      </tr>
+      <tr>
+        <td class="tile" row=4 column=0></td>
+        <td class="tile" row=4 column=1></td>
+        <td class="tile" row=4 column=2></td>
+        <td class="tile" row=4 column=3></td>
+        <td class="tile" row=4 column=4></td>
+        <td class="tile" row=4 column=5></td>
+        <td class="tile" row=4 column=6></td>
+      </tr>
+      <tr>
+        <td class="tile" row=5 column=0></td>
+        <td class="tile" row=5 column=1></td>
+        <td class="tile" row=5 column=2></td>
+        <td class="tile" row=5 column=3></td>
+        <td class="tile" row=5 column=4></td>
+        <td class="tile" row=5 column=5></td>
+        <td class="tile" row=5 column=6></td>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
