--- a/front/js/components/playModeComponent/playModeComponent.css
+++ b/front/js/components/playModeComponent/playModeComponent.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
+
 }
 
 button {
@@ -19,12 +20,18 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 33px;
 }
 
 .centered{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
