made login page responsive

--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -5,7 +5,7 @@
     <form id="loginForm" action="#">
         <h1>Login</h1>
         <div class="">
-            <input type="mail" name="mail" id="mail" placeholder="Email" required />
+            <input type="email" name="mail" id="mail" placeholder="Email" required />
         </div>
         <div class="">
             <input type="password" name="pwd" id="pwd" placeholder="Password" required />
