--- a/front/js/components/loginPageComponent/loginPageComponent.css
+++ b/front/js/components/loginPageComponent/loginPageComponent.css
@@ -21,7 +21,7 @@
 }
 
 /* Style the input fields */
-input[type="mail"],
+input[type="email"],
 input[type="password"] {
     border: 1px solid black;
     border-radius: 10px;
@@ -45,5 +45,46 @@ input[type="password"] {
 h1 {
     font-size: 36px;
     margin-bottom: 20px;
+}
+
+
+/***  Responsive ***/
+
+@media screen and (max-width: 500px) {
+    .container {
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 0 10px;
+    }
+    #loginForm {
+        width: 50%;
+        padding: 30px
+    }
+    h1 {
+        text-align: center;
+        margin-top: 0;
+        font-size: 26px;
+    }
+    .form-group {
+        margin-bottom: 20px;
+    }
+    input[type="email"],
+    input[type="password"] {
+        width: 90%;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+    }
+    #login-btn {
+        width: 20%;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        text-align: center;
+    }
+
 }
 
