--- a/front/js/components/registerPageComponent/registerPageComponent.css
+++ b/front/js/components/registerPageComponent/registerPageComponent.css
@@ -8,14 +8,14 @@ h1 {
     font-size: 36px;
     margin-top: 2px;
     color: black;
-
+    text-align: center;
 }
 
 form {
     background-color: white;
     width: 400px;
     margin: 50px auto;
-    padding: 20px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 10px #BBBBBB;
 }
@@ -40,10 +40,38 @@ input[type="text"], input[type="email"], input[type="password"] {
     font-size: 20px;
     border-radius: 10px;
     border: none;
-    margin-top: 20px;
     cursor: pointer;
 }
 
 .sub:hover {
     background-color: #3E8E41;
+}
+
+@media screen and (max-width: 500px) {
+    form {
+        width: 50%;
+        padding: 30px;
+    }
+    h1 {
+        margin-top: 0;
+        font-size: 26px;
+    }
+    .form-group {
+        margin-bottom: 20px;
+    }
+    input[type="text"], input[type="email"], input[type="password"] {
+        width: 90%;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+    }
+    #signup-btn{
+        width: auto;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
 }
