--- a/front/js/components/registerPageComponent/registerPageComponent.html
+++ b/front/js/components/registerPageComponent/registerPageComponent.html
@@ -6,10 +6,15 @@
 
 <form id="signupForm" action="#">
     <h1>Register</h1>
-    <input type="email" name="mail" id="mail" placeholder="Email" required>
-    <input type="text" name="username" id="username" placeholder="Username" required>
-    <input type="password" name="password" id="pwd" placeholder="Password" required>
-
+    <div class="">
+        <input type="email" name="mail" id="mail" placeholder="Email" required>
+    </div>
+    <div class="">
+        <input type="text" name="username" id="username" placeholder="Username" required>
+    </div>
+    <div class="">
+        <input type="password" name="password" id="pwd" placeholder="Password" required>
+    </div>
     <button id="signup-btn" class="sub" type="submit">Sign up</button>
 </form>
 </div>
