--- a/front/js/components/loginPageComponent/loginPageComponent.html
+++ b/front/js/components/loginPageComponent/loginPageComponent.html
@@ -1,6 +1,11 @@
 <style>
     @import url("./js/components/loginPageComponent/loginPageComponent.css");
 </style>
+
+<div class="home-btn" id="home-link">
+    home <i class='fa fa-home'></i>
+</div>
+
 <div class="container">
     <form id="loginForm" action="#">
         <h1>Login</h1>
