--- a/front/js/components/registerPageComponent/registerPageComponent.html
+++ b/front/js/components/registerPageComponent/registerPageComponent.html
@@ -2,6 +2,10 @@
     @import url("./js/components/registerPageComponent/registerPageComponent.css");
 </style>
 
+<div class="home-btn" id="home-link">
+    home <i class='fa fa-home'></i>
+</div>
+
 <div class="wrapper">
 
 <form id="signupForm" action="#">
